--- a/assets/md/life/1.md
+++ b/assets/md/life/1.md
@@ -1,18 +1,72 @@
 ---
-title: タイトル
+title: スティーブ・ジョブズ
 created_at: 2020-03-01
 image: img1.jpg
 ---
 
-# マークダウンを使ってよみう1
+<iframe src="https://www.youtube.com/embed/lPv8Ltya0_U" width="560" height="315" frameborder="0" allowfullscreen="allowfullscreen"><span data-mce-type="bookmark" style="display: inline-block; width: 0px; overflow: hidden; line-height: 0;" class="mce_SELRES_start">﻿</span></iframe>
+<h1>スティーブ・ジョブズとは？</h1>
+&nbsp;
 
-## h2タグだよ1
+<a href="https://www.amazon.co.jp/gp/product/B009GXM2AS/ref=as_li_tl?ie=UTF8&amp;camp=247&amp;creative=1211&amp;creativeASIN=B009GXM2AS&amp;linkCode=as2&amp;tag=genki001-22&amp;linkId=353bdc57b8b356cc844c70e93119985b" target="_blank" rel="noopener"><img src="//ws-fe.amazon-adsystem.com/widgets/q?_encoding=UTF8&amp;MarketPlace=JP&amp;ASIN=B009GXM2AS&amp;ServiceVersion=20070822&amp;ID=AsinImage&amp;WS=1&amp;Format=_SL250_&amp;tag=genki001-22" border="0" /></a><img style="border: none !important; margin: 0px !important;" src="//ir-jp.amazon-adsystem.com/e/ir?t=genki001-22&amp;l=am2&amp;o=9&amp;a=B009GXM2AS" alt="" width="1" height="1" border="0" />
 
-### h3タグだよ1
+<strong>Appleの共同設立者</strong>。
+世の中に「Macintosh(Mac)」や「iPpod」「iPhone」を送り出した。
+またピクサーアニメーションの設立者でもある。
+<h1>こんな方にオススメの映画</h1>
+&nbsp;
 
-texttexttexttexttexttexttexttexttexttext
-texttexttexttexttexttexttexttext
-texttexttexttexttexttext
-texttexttexttext
+&nbsp;
+<blockquote><span style="font-size: 14pt;"><em>スティーブ・ジョブズやAppleの製品のファン</em></span>
 
-改行タグ不要な設定
+<span style="font-size: 14pt;"><em>コンピュータの黎明期の物語を知りたい方</em></span>
+
+<span style="font-size: 14pt;"><em>夢に向かって孤独に夢を追いかけている方</em></span>
+
+<span style="font-size: 14pt;"><em>逆境にくじけそうで勇気をもらいたい方</em></span>
+
+<span style="font-size: 14pt;"><em>家族の大切さを再認識させられた方</em></span>
+</blockquote>
+&nbsp;
+<h1>オススメポイント</h1>
+&nbsp;
+
+<a href="https://www.amazon.co.jp/gp/product/475152223X/ref=as_li_tl?ie=UTF8&amp;camp=247&amp;creative=1211&amp;creativeASIN=475152223X&amp;linkCode=as2&amp;tag=genki001-22&amp;linkId=df2a0127391a60dc0a253ee84032882e" target="_blank" rel="noopener"><img src="//ws-fe.amazon-adsystem.com/widgets/q?_encoding=UTF8&amp;MarketPlace=JP&amp;ASIN=475152223X&amp;ServiceVersion=20070822&amp;ID=AsinImage&amp;WS=1&amp;Format=_SL250_&amp;tag=genki001-22" border="0" /></a><img style="border: none !important; margin: 0px !important;" src="//ir-jp.amazon-adsystem.com/e/ir?t=genki001-22&amp;l=am2&amp;o=9&amp;a=475152223X" alt="" width="1" height="1" border="0" />
+
+&nbsp;
+<h2>どんな時でも自分だけの考えを持ち一切妥協をしない人物像</h2>
+製品の開発に置いてジョブズは徹底的に妥協を許しません。
+
+どんな優秀なプログラマーでもビジョンについてこないメンバーを躊躇なくクビにするシーンではそんな彼の妥協しない人物像が描かれます。
+<h2>誰からも理解されず、それでも自分のビジョンを信じる</h2>
+ジョブズは天才で初めは誰からもまともに取り合ってもらえません。
+
+あのジョブズが何件も営業電話で断られ続けているシーンは誰もが同じ壁にぶつかるのだと気づかせてくれる名シーンです。
+<h2>PCはどのように家庭に普及したのか？</h2>
+<a href="https://www.amazon.co.jp/gp/product/B07219CTMK/ref=as_li_tl?ie=UTF8&amp;camp=247&amp;creative=1211&amp;creativeASIN=B07219CTMK&amp;linkCode=as2&amp;tag=genki001-22&amp;linkId=b00d925a114ca681d032aa23defa54f2" target="_blank" rel="noopener"><img src="//ws-fe.amazon-adsystem.com/widgets/q?_encoding=UTF8&amp;MarketPlace=JP&amp;ASIN=B07219CTMK&amp;ServiceVersion=20070822&amp;ID=AsinImage&amp;WS=1&amp;Format=_SL250_&amp;tag=genki001-22" border="0" /></a><img style="border: none !important; margin: 0px !important;" src="//ir-jp.amazon-adsystem.com/e/ir?t=genki001-22&amp;l=am2&amp;o=9&amp;a=B07219CTMK" alt="" width="1" height="1" border="0" />
+
+どのようにPCが家庭に普及したのかが深く描かれITの歴史についても触れることができます。
+
+私の生まれる前の時代背景も描かれており今では信じられないような見た目のパソコンも登場。
+
+Macがいかに先進的だったかを知ることができます。
+<h2>孤独になりながらも自身の信念に向かって進み続ける姿</h2>
+友人、恋人、仲間。会社が大きくなるにつれてジョブズは孤独に追いやられていきます。
+
+そんな中でも葛藤し自分と向き合いながら自分の信念のために歩み続けるジョブズの姿に勇気をもらえます。
+<h2>家族、大切な人との時間の大切さ</h2>
+Appleを追放されたジョブズは家族と共に暮らし始めます。
+
+これまで仕事に生き悩み抜いてきたジョブズが唯一心安らぐ表情を見せます。
+
+どんな天才でも人間なのだと気づかされるシーンです。
+<h1>まとめ</h1>
+<a href="https://www.amazon.co.jp/gp/product/B00KG0X8S0/ref=as_li_tl?ie=UTF8&amp;camp=247&amp;creative=1211&amp;creativeASIN=B00KG0X8S0&amp;linkCode=as2&amp;tag=genki001-22&amp;linkId=105ff86760ae70b9d09618fedfbf5b47" target="_blank" rel="noopener"><img src="//ws-fe.amazon-adsystem.com/widgets/q?_encoding=UTF8&amp;MarketPlace=JP&amp;ASIN=B00KG0X8S0&amp;ServiceVersion=20070822&amp;ID=AsinImage&amp;WS=1&amp;Format=_SL250_&amp;tag=genki001-22" border="0" /></a><img style="border: none !important; margin: 0px !important;" src="//ir-jp.amazon-adsystem.com/e/ir?t=genki001-22&amp;l=am2&amp;o=9&amp;a=B00KG0X8S0" alt="" width="1" height="1" border="0" />
+
+世界を変えた天才スティーブ・ジョブズ。
+
+その天才の苦悩や生き方から勇気をもらえる作品です。
+
+&nbsp;
+
+&nbsp;
