--- a/assets/md/life/2.md
+++ b/assets/md/life/2.md
@@ -1,18 +1,101 @@
 ---
-title: タイトル2
+title: 東京で初めて満員電車に乗り合わせ話
 created_at: 2020-03-01
 image: img1.jpg
 ---
 
-# マークダウンを使ってよみう2
+<h2>東京で初めて満員電車に乗り合わせ話</h2>
+都市部で働く人が避けては通れない満員電車。
 
-## h2タグだよ2
+僕は上京して働き出すまであの人口密度は味わったことがなかったです。
 
-### h3タグだよ2
+<strong>学生時代の夏の部室よりもムシムシした環境があったなんて驚きでした。</strong>
 
-texttexttexttexttexttexttexttexttexttext
-texttexttexttexttexttexttexttext
-texttexttexttexttexttext
-texttexttexttext
+皆目線を下げて自分の立つスペースを確保するために平気で他人を払いのける異常な空間です。
 
-改行タグ不要な設定
+パーソナルスペースもあったもんじゃありません。
+
+<strong>僕は満員電車がとにかく嫌いです。</strong>
+
+<span style="font-size: 14pt;"><strong>僕は満員電車がとにかく大嫌いです。大事なことなので2回言います！</strong></span>
+
+満員電車に乗りたくない＝フリーランスで働きたい＝エンジニア
+
+こんな流れで未経験からエンジニアになったくらいなので。
+
+<strong>（ついでに並ぶのも大嫌いです。時間がもったいないので。）</strong>
+<h2>肘打ち・タックルなんでもあり</h2>
+僕が満員電車を嫌いな理由はいくつかあります。
+
+以前太ったおばさんになにが気に障ったのか突然肘打ちされました。
+
+僕は一体何が起きたのか把握することもできずただ呆然とするしかなかったのを覚えています。
+
+また別の日ですが乗車するときに後ろに並んでいた少し日焼けした50代くらいのおじさんに
+
+思いっきりショルダータックルされたこともあります。
+
+<strong>日大の悪質タックル問題が今世間を騒がせていますが
+毎日の満員電車での悪質タックルはもっと取り上げられるべきではないではないでしょうか。</strong>
+<h2>なぜこのような人がいるのか</h2>
+とにかく満員電車の我先に、という空気が嫌いです。
+
+パニック映画で他人を見捨ててでも生き延びようとする様子に似ています。
+<h3>僕なりになぜこのような体当たり人間が多いのか理由を考えてみました。</h3>
+<ul>
+ 	<li>単純に自分勝手でマナーなど気にしない</li>
+ 	<li>満員電車のストレスで正常な行動が取れない</li>
+ 	<li>したくもない仕事に行かなければならずイライラしている</li>
+ 	<li>マジで遅刻しそうで焦っていてやってしまう</li>
+ 	<li>憂さ晴らしでやっている</li>
+ 	<li>ほんとはやりたくないがマナーなんか気にしてられない</li>
+</ul>
+理由は人それぞれなんじゃないでしょうか。
+
+<strong>ただそういうことをやりたくてやってる人はいないのだと思いたいです。</strong>
+
+働き方改革が騒がれていますが本当に解決できるのであればもっと早く解決されている気もします。
+
+それだけ根深い問題なんだと感じています。
+<h2>満員電車を避けるためにやっていること</h2>
+冒頭にも書きましたがとにかく僕は満員電車が嫌いです。
+
+僕がやってる満員電車回避法を少し挙げてみます。
+<h3>満員電車回避法</h3>
+<ul>
+ 	<li>会社の近くに住む</li>
+ 	<li>人が少な目の車両を狙う</li>
+ 	<li>無理せず次の電車を待つ</li>
+</ul>
+<h4>会社の近くに住む</h4>
+これは独身で一人暮らしをしているために選べた選択肢です。やはり会社が近いと通勤が快適になるので生活が快適になります。
+
+ただやはり家族がいるなどこの選択肢をとっていける方は限られてくるのではないでしょうか？
+<h4>人が少な目の車両を狙う</h4>
+これは意外とやってる人が少ないことに驚きです。隣の車両は空いているのにぎゅうぎゅうな並んでいる車両に入って行く人が多いことに驚きました。
+
+ただ朝の山手線などどの車両もマジですし詰め状態だと難しくなってきます。
+<h4>無理せず次の電車を待つ</h4>
+これはどうしようもない時にとる手段です。
+
+マジでぎゅうぎゅう過ぎて乗り込むのをためらう時は僕は無理せず次の電車を待つようにしています。
+
+<strong>駅のホームのアナウンスでよく聞こえてくる『次の電車をお待ちください』を素直に従う作戦です笑</strong>
+
+意外と次の電車は空いていることも多いので朝は時間に余裕を持って出るといいことがあるんですね！
+<h2>まとめ</h2>
+今まで感じていた満員電車に対する疑問を書いてみました。
+
+<strong>一番の解決策は「満員電車に乗らなくてもいいようになる」or「電車が空いていればいい」です。</strong>
+
+<strong>そもそも満員電車がなければストレスを感じなくて済みますしね</strong>
+
+「満員電車に乗らなくてもいいようになる」は現実的ではないので願望ですね。
+
+僕はエンジニアなのでリモートでも働けるような信頼と実績を積み上げていきたいです！
+
+<strong>企業の中にも混雑を避けるためにラッシュアワーを分散させたりなどいい方向に動いている企業も多くなりいい流れだと思います。</strong>
+
+<strong>このような企業を社会が評価して後押しして行くのが満員電車問題をなくしていく近道なのかなぁと思います。</strong>
+
+ご一読ありがとうございました。
