--- a/assets/md/life/3.md
+++ b/assets/md/life/3.md
@@ -1,18 +1,21 @@
 ---
-title: タイトル3
+title: 人生とは自転車のようなものだ。
 created_at: 2020-03-01
 image: img1.jpg
 ---
 
-# マークダウンを使ってよみう3
+<h2>人生とは自転車のようなものだ。</h2>
+<h4>誰の言葉？</h4>
 
-## h2タグだよ3
+<code>アインシュタイン</code>　の言葉
+<a target="_blank"  href="https://www.amazon.co.jp/gp/product/4797389168/ref=as_li_tl?ie=UTF8&camp=247&creative=1211&creativeASIN=4797389168&linkCode=as2&tag=genki001-22&linkId=cf0809a0ea5ea5966cd8d5eef042753d"><img border="0" src="//ws-fe.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=JP&ASIN=4797389168&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL250_&tag=genki001-22" ></a><img src="//ir-jp.amazon-adsystem.com/e/ir?t=genki001-22&l=am2&o=9&a=4797389168" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
 
-### h3タグだよ3
+<h4>全文は？</h4>
+<code>人生とは自転車のようなものだ。<br>倒れないようにするには<br>走らなければならない。</code>
 
-texttexttexttexttexttexttexttexttexttext
-texttexttexttexttexttexttexttext
-texttexttexttexttexttext
-texttexttexttext
+<h4>意味は？</h4>
+<code>人生とは常に前進を求められる</code>
+変化し続けることが求められる現代において、偉大な物理学者であるアインシュタインの言葉は胸に突き刺さるものがあります。
 
-改行タグ不要な設定
+<h2>まとめ</h2>
+<strong>辛い時や苦しい時でも前に進み続けることで道は開けるという前向きになれる名言。</strong>
