--- a/assets/md/tech/2.md
+++ b/assets/md/tech/2.md
@@ -1,12 +1,15 @@
 ---
 title: 【コピペですぐに使える】画像圧縮機能
 created_at: 2020-03-02
+type: tech
 image: img1.jpg
+description: gulpとimageminを使用して画像の圧縮を行う方法を解説しています。コピペでOKです！
 ---
 
-#【コピペですぐに使える】画像圧縮機能
 
-##Githubはこちら
+# 【コピペですぐに使える】画像圧縮機能
+
+## Githubはこちら
 https://github.com/RantaroTech/imagemin_gulp
 
 ### Githubからクローンした場合の手順
@@ -183,5 +186,3 @@ Finished 'img' after 571 ms
 ・細かい圧縮の設定などを変更したい場合はリンクの公式のオプションを参考にしてみてください。
 
 ここまでお読みいただきありがとうございました。
-
-雑談：iPhoneXの画質すごい
