--- a/assets/md/tech/1.md
+++ b/assets/md/tech/1.md
@@ -1,7 +1,9 @@
 ---
 title: Gatby.js＋NetlifyでLightHouse満点のサイトを1日で作った話
-created_at: 2020-03-01
+created_at: 2019-11-06
+type: tech
 image: img1.jpg
+description: Gatby.jsとNetlifyでお手軽にブログを作成して公開するまでの手順を記事にしました。
 ---
 
 # Gatby.js＋NetlifyでLightHouse満点のサイトを1日で作った話
