--- a/assets/md/tech/3.md
+++ b/assets/md/tech/3.md
@@ -1,7 +1,9 @@
 ---
 title: pythonを触ってみた。
-created_at: 2020-03-03
-image: img1.jpg
+created_at: 2017-03-03
+type: tech
+image: 
+description: チャットボットを作りたくてpythonを触ってみた。
 ---
 
 # pythonを触ってみた。
