--- a/static/md/life/1.md
+++ b/static/md/life/1.md
@@ -1,7 +1,7 @@
 ---
 title: スティーブ・ジョブズ
 created_at: 2020-03-01
-image: img1.jpg
+image: /images/post/sample.jpg
 ---
 
 <iframe src="https://www.youtube.com/embed/lPv8Ltya0_U" width="560" height="315" frameborder="0" allowfullscreen="allowfullscreen"><span data-mce-type="bookmark" style="display: inline-block; width: 0px; overflow: hidden; line-height: 0;" class="mce_SELRES_start">﻿</span></iframe>
