新記事情報のスタイル修正

--- a/static/md/tech/2.md
+++ b/static/md/tech/2.md
@@ -2,7 +2,7 @@
 title: 【コピペですぐに使える】画像圧縮機能
 created_at: 2020-03-02
 type: tech
-image: /images/post/sample.jpg
+image: /images/post-sample.jpg
 description: gulpとimageminを使用して画像の圧縮を行う方法を解説しています。コピペでOKです！
 ---
 
