--- a/static/md/tech/3.md
+++ b/static/md/tech/3.md
@@ -2,7 +2,7 @@
 title: pythonを触ってみた。
 created_at: 2017-03-03
 type: tech
-image: /images/post/sample.jpg
+image: /images/post-sample.jpg
 description: チャットボットを作りたくてpythonを触ってみた。
 ---
 
