--- a/static/md/photo/1.md
+++ b/static/md/photo/1.md
@@ -1,7 +1,7 @@
 ---
 title: test-photo1
 created_at: 2020-03-01
-image: /images/post/sample.jpg
+image: /images/post-sample.jpg
 ---
 
 # test-photo1
