--- a/static/md/photo/2.md
+++ b/static/md/photo/2.md
@@ -1,7 +1,7 @@
 ---
 title: test-photo2
 created_at: 2020-03-02
-image: /images/post/sample.jpg
+image: /images/post-sample.jpg
 ---
 
 # test-photo2
