--- a/static/md/tech/1.md
+++ b/static/md/tech/1.md
@@ -2,7 +2,7 @@
 title: Gatby.js＋NetlifyでLightHouse満点のサイトを1日で作った話
 created_at: 2019-11-06
 type: tech
-image: /images/post/sample.jpg
+image: /images/post-sample.jpg
 description: Gatby.jsとNetlifyでお手軽にブログを作成して公開するまでの手順を記事にしました。
 ---
 
