mdにタグ追加

--- a/static/md/tech/1.md
+++ b/static/md/tech/1.md
@@ -4,6 +4,9 @@ created_at: 2019-11-06
 type: tech
 image: /images/post-sample.jpg
 description: Gatby.jsとNetlifyでお手軽にブログを作成して公開するまでの手順を記事にしました。
+tags: 
+  - Javascript
+  - Gatby.js
 ---
 
 # Gatby.js＋NetlifyでLightHouse満点のサイトを1日で作った話
