--- a/static/md/tech/3.md
+++ b/static/md/tech/3.md
@@ -4,6 +4,8 @@ created_at: 2017-03-03
 type: tech
 image: /images/post-sample.jpg
 description: チャットボットを作りたくてpythonを触ってみた。
+tags: 
+  - Python
 ---
 
 # pythonを触ってみた。
