--- a/static/md/tech/2.md
+++ b/static/md/tech/2.md
@@ -4,6 +4,9 @@ created_at: 2020-03-02
 type: tech
 image: /images/post-sample.jpg
 description: gulpとimageminを使用して画像の圧縮を行う方法を解説しています。コピペでOKです！
+tags: 
+  - Javascript
+  - Gulp
 ---
 
 
